# Cdbgtricks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VERSIONS.md
src/: BooPHF.h  ColorSet.cpp  Colorset.hpp  CommonUtils.cpp  CommonUtils.h  FileSerializer.hpp  ParseGFA.cpp  ParseGFA.h  QueryStreamer.cpp  QueryStreamer.hpp  bit_vector.cpp  bit_vector.hpp  index.cpp  index.hpp  index_kmer.cpp  index_kmer.h  main  main.cpp  makefile  mapper.cpp  mapper.hpp  strict_fstream.hpp  symbiose_seminar.txt  unitig.cpp  unitig.h  unitigmodification.cpp  unitigmodification.h  utils.sh  zstr.hpp
test/: CMakeLists.txt  compare_fastas.py  queries.fa  queries_original_graph.fa  test_common.cpp  test_unitig.cpp
